# meanflow_audio_codec

./: .cursorrules  .gitignore  GAP_ANALYSIS.md  README.md  pyproject.toml  train.py
benchmarks/: benchmark_audio_vs_torch.py  benchmark_mdct.py  benchmark_mdct_simple.py  benchmark_meanflow_vs_improved.py  benchmark_mp3_loaders.py  benchmark_prefetch.py
configs/: autoencoder_mlp_audio.json  example_mnist.json  method=autoencoder--architecture=convnet--dataset=audio--tokenization=mdct.json  method=autoencoder--architecture=convnet--dataset=audio--tokenization=reshape.json  method=autoencoder--architecture=convnet--dataset=audio.json  method=autoencoder--architecture=convnet--dataset=mnist--tokenization=mdct.json  method=autoencoder--architecture=convnet--dataset=mnist--tokenization=reshape.json  method=autoencoder--architecture=convnet--dataset=mnist.json  method=autoencoder--architecture=mlp--dataset=audio--tokenization=mdct.json  method=autoencoder--architecture=mlp--dataset=audio--tokenization=reshape.json  method=autoencoder--architecture=mlp--dataset=audio.json  method=autoencoder--architecture=mlp--dataset=mnist--tokenization=mdct.json  method=autoencoder--architecture=mlp--dataset=mnist--tokenization=reshape.json  method=autoencoder--architecture=mlp--dataset=mnist.json  method=autoencoder--architecture=mlp_mixer--dataset=audio--tokenization=mdct.json  method=autoencoder--architecture=mlp_mixer--dataset=audio--tokenization=reshape.json  method=autoencoder--architecture=mlp_mixer--dataset=audio.json  method=autoencoder--architecture=mlp_mixer--dataset=mnist.json  (+56 more)
(+110 files in other folders)
