[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meanflow-audio-codec"
version = "0.1.0"
description = "MDCT-based autoencoder audio codec using Improved Mean Flows."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flax>=0.8",
    "jax==0.4.38",
    "jaxlib==0.4.38",
    "librosa>=0.10",
    "matplotlib>=3.8",
    "numpy>=1.26,<2.0",
    "optax>=0.2",
    "pytest>=8.0",
    "tensorflow>=2.17",
    "tensorflow-datasets>=4.9",
    "tqdm>=4.66",
    "grain>=0.2",
    "loadax>=0.2.1",
    "toolz>=0.12",
    "scipy>=1.11",
    "jax-metal==0.1.1 ; platform_machine == 'arm64' and platform_system == 'Darwin'",
]

[project.optional-dependencies]
metal = ["jax-metal==0.1.1; platform_system == 'Darwin' and platform_machine == 'arm64'"]
audio = [
    "minimp3py @ git+https://github.com/f0k/minimp3py.git",
    "pesq>=0.0.4",
    "pystoi>=0.3.3",
]
# Convenience extra that includes all optional dependencies
all = [
    "minimp3py @ git+https://github.com/f0k/minimp3py.git",
    "jax-metal==0.1.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.scripts]
meanflow-audio-codec = "train:main"

[tool.setuptools]
packages = ["meanflow_audio_codec"]
